--- a/jira-backend/package.json
+++ b/jira-backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.15.0",
     "nodemailer": "^6.10.1",
     "redis": "^5.1.0",
+    "resend": "^4.5.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
