Implement OAuth authentication with Google and GitHub, including session management and user handling

--- a/jira-backend/package.json
+++ b/jira-backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "imagekit": "^6.0.0",
     "ioredis": "^5.6.1",
     "jose": "^5.1.1",
@@ -24,6 +25,9 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.15.0",
     "nodemailer": "^6.10.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "redis": "^5.1.0",
     "resend": "^4.5.1",
     "zod": "^3.24.3"
@@ -34,10 +38,14 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.16",
     "@types/mongoose": "^5.11.96",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-google-oauth20": "^2.0.16",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.3",
