--- a/jira-backend/package.json
+++ b/jira-backend/package.json
@@ -30,7 +30,8 @@
     "passport-google-oauth20": "^2.0.0",
     "redis": "^5.1.0",
     "resend": "^4.5.1",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
