--- a/jira-frontend/package.json
+++ b/jira-frontend/package.json
@@ -23,7 +23,9 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "5.59.0",
+    "@types/react-redux": "^7.1.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -36,6 +38,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.2",
