feat: add workspace settings form with edit and delete functionality

--- a/jira-frontend/package.json
+++ b/jira-frontend/package.json
@@ -28,7 +28,7 @@
     "@types/react-redux": "^7.1.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "hono": "4.6.3",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
@@ -40,6 +40,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.3",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
