--- a/jira-frontend/package.json
+++ b/jira-frontend/package.json
@@ -28,7 +28,8 @@
     "@types/react-redux": "^7.1.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "cmdk": "^1.1.1",
+    "date-fns": "^3.6.0",
     "hono": "4.6.3",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
