--- a/jira-frontend/package.json
+++ b/jira-frontend/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "5.59.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/react-redux": "^7.1.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
